--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
   </header>
   <main class="container">
-    <section class="tela-input">
-      <input type="text">
+    <section>
+      <p class="telinha"></p>
     </section>
     <section>
       <ul>
